# system-design-challenges

./: README.md  generate_challenges.py  generate_projects.py
system-design-challenges-50/day05/backend/: Dockerfile  README.md  gunicorn_conf.py  prestart.sh  pyproject.toml
system-design-challenges-50/day05/backend/app/api/v1/: auth.py  (+3 more)
system-design-challenges-50/day05/backend/app/core/: config.py  logging.py  security.py
system-design-challenges-50/day05/backend/app/db/: base.py  init_db.py  session.py
system-design-challenges-50/day05/backend/app/models/: event.py  lock.py  project.py  requirement.py  user.py  version.py
system-design-challenges-50/day05/backend/app/schemas/: project.py  requirement.py  user.py  version.py
system-design-challenges-50/day05/backend/app/services/: cache_service.py  event_service.py  queue_service.py  requirement_service.py  version_service.py
system-design-challenges-50/day19/: .dockerignore  .env.sample  ARCHITECTURE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
system-design-challenges-50/day19/app/: main.py
system-design-challenges-50/day19/app/api/: deps.py
system-design-challenges-50/day19/app/api/routes/: admin.py  files.py  health.py
system-design-challenges-50/day19/app/core/: config.py  logging.py  security.py
system-design-challenges-50/day19/app/db/: models.py  repository.py  session.py
system-design-challenges-50/day19/app/services/: recovery_service.py  replication_service.py  wal_service.py
system-design-challenges-50/day19/app/storage/: local_store.py  object_store.py
system-design-challenges-50/day19/app/telemetry/: metrics.py  tracing.py
system-design-challenges-50/day19/app/workers/: replicator_worker.py
system-design-challenges-50/day19/scripts/: load_test.py  repair_replicas.py
system-design-challenges-50/day19/tests/: test_api.py  test_recovery.py  test_replication.py  test_wal.py
system-design-challenges-50/day22/: .gitignore  ARCHITECTURE.md  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
system-design-challenges-50/day22/app/: config.py  dependencies.py  events.py  main.py
system-design-challenges-50/day22/app/cache/: keys.py  redis_client.py
system-design-challenges-50/day22/app/db/: init.sql  session.py
system-design-challenges-50/day22/app/models/: feed_cache.py  metadata_rollup.py  post.py  user.py
system-design-challenges-50/day22/app/mq/: kafka_consumer.py  kafka_producer.py  topics.py
system-design-challenges-50/day22/app/routes/: admin.py  auth.py  feed.py  health.py  posts.py
system-design-challenges-50/day22/app/schemas/: auth.py  common.py  feed.py  user.py
system-design-challenges-50/day22/app/services/: auth_service.py  cache_invalidation.py  cost_optimizer.py  feed_service.py  post_service.py  rollup_service.py
system-design-challenges-50/day22/app/utils/: feature_flags.py  hashing.py  logger.py  throttling.py  token.py
system-design-challenges-50/day22/app/workers/: beat_schedule.py  celery_app.py
system-design-challenges-50/day22/app/workers/tasks/: email_tasks.py  feed_tasks.py  rollup_tasks.py
system-design-challenges-50/day22/app/ws/: connection_manager.py  events_publisher.py
system-design-challenges-50/day22/infra/k8s/: api-deployment.yaml  ingress.yaml  kafka-statefulset.yaml  postgres-statefulset.yaml  redis-statefulset.yaml  worker-deployment.yaml
system-design-challenges-50/day22/infra/scripts/: migrate_db.sh
system-design-challenges-50/day22/infra/terraform/: main.tf  outputs.tf  variables.tf
system-design-challenges-50/day22/infra/terraform/modules/: README.md
system-design-challenges-50/day22/monitoring/grafana/: dashboards.json
system-design-challenges-50/day22/monitoring/opentelemetry/: otel-config.yaml
system-design-challenges-50/day22/monitoring/prometheus/: prometheus.yml
system-design-challenges-50/day22/scripts/: benchmark_queries.py  bootstrap_local.sh  generate_fake_data.py  seed_redis.py
system-design-challenges-50/day22/tests/: conftest.py
system-design-challenges-50/day22/tests/integration/: test_auth.py  test_feed_flow.py  test_likes_delayed_consistency.py
system-design-challenges-50/day22/tests/performance/: locustfile.py
system-design-challenges-50/day22/tests/performance/k6/: feed_scenario.js
system-design-challenges-50/day22/tests/unit/: test_routes.py  test_services.py
(+915 files in other folders)
